Fix Alignment issue?

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1440,8 +1440,8 @@ input, select, textarea {
 				}
 
 			#header .logo {
-				width: 4.75rem;
-				height: 4.75rem;
+				width: 10rem;
+				height: 6.5rem;
 				line-height: 4.75rem;
 			}
 
